crates/capsec/tests/compile_fail/requires_on_wrong_type.rs
/// #[capsec::requires(fs::read, on = ctx)] fails when ctx type lacks Has<FsRead>.
use capsec::prelude::*;

struct NoHas;

#[capsec::requires(fs::read, on = ctx)]
fn process(ctx: &NoHas) {}

fn main() {}
