crates/capsec/tests/compile_fail/requires_on_wrong_type.stderr
warning: unused import: `capsec::prelude::*`
 --> tests/compile_fail/requires_on_wrong_type.rs:2:5
  |
2 | use capsec::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `NoHas: Has<FsRead>` is not satisfied
 --> tests/compile_fail/requires_on_wrong_type.rs:7:18
  |
7 | fn process(ctx: &NoHas) {}
  |                  ^^^^^ unsatisfied trait bound
  |
help: the trait `Has<FsRead>` is not implemented for `NoHas`
 --> tests/compile_fail/requires_on_wrong_type.rs:4:1
  |
4 | struct NoHas;
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `Has<P>`:
            `Cap<(Ambient, Ambient)>` implements `Has<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `Has<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `Has<EnvRead>`
            `Cap<(Ambient, EnvWrite)>` implements `Has<Ambient>`
            `Cap<(Ambient, EnvWrite)>` implements `Has<EnvWrite>`
            `Cap<(Ambient, FsAll)>` implements `Has<Ambient>`
            `Cap<(Ambient, FsAll)>` implements `Has<FsAll>`
            `Cap<(Ambient, FsRead)>` implements `Has<Ambient>`
          and $N others
note: required by a bound in `_assert_has_0`
 --> tests/compile_fail/requires_on_wrong_type.rs:6:1
  |
6 | #[capsec::requires(fs::read, on = ctx)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_assert_has_0`
  = note: this error originates in the attribute macro `capsec::requires` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `ctx`
 --> tests/compile_fail/requires_on_wrong_type.rs:7:12
  |
7 | fn process(ctx: &NoHas) {}
  |            ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
